@@ -1,6 +1,8 @@
 Revision history for perl distribution Convos
 
 7.07 Not Released
+ - Fix "Attach a file" link in chat input
+ - Changed "+" menu in chat input to get hidden when clicking elsewhere
  - Changed static assets directory from /asset/ to /assets/
  - No need for Mojolicious::Plugin::Webpack anymore
  - Bumped Mojolicious to 9.27
